<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/direction_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="horizontal">

        //coin logo
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/coin_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/coin_logo"
                android:layout_margin="16dp"
                android:src="@drawable/btc"
                android:scaleType="fitXY"
                android:layout_width="32dp"
                android:layout_height="32dp" />
        </LinearLayout>

        //coin info
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:weightSum="5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    //name
                    <LinearLayout
                        android:layout_marginTop="@dimen/margin_small"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_marginRight="@dimen/margin_small"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginEnd="@dimen/margin_very_small"
                            android:textStyle="bold"
                            android:textSize="@dimen/textSizeBig"
                            android:textColor="@color/colorAccentText"
                            android:id="@+id/coin_name"
                            android:text="Bitcoin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textStyle="bold"
                            android:textSize="@dimen/textSizeBig"
                            android:textColor="@color/colorAccentText"
                            android:id="@+id/coin_symbol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    //price usd
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginEnd="@dimen/margin_very_small"
                            android:textColor="@color/colorAccentLightText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coin_price_usd"/>

                        <TextView
                            android:id="@+id/coin_price_usd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    //price btc
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginEnd="@dimen/margin_very_small"
                            android:textColor="@color/colorAccentLightText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/coin_price_btc"/>

                        <TextView
                            android:id="@+id/coin_price_btc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                //favourite image
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/coin_favourite"
                        android:src="@drawable/ic_favourite_yello_24dp"
                        android:layout_width="24dp"
                        android:layout_height="24dp" />

                </LinearLayout>

            </LinearLayout>

            //change in price
            <LinearLayout
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginEnd="@dimen/margin_very_small"
                        android:textColor="@color/colorAccentLightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_price_change_1h"/>

                    <TextView
                        android:id="@+id/coin_price_change_1h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginEnd="@dimen/margin_very_small"
                        android:textColor="@color/colorAccentLightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_price_change_24h"/>

                    <TextView
                        android:id="@+id/coin_price_change_24h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginEnd="@dimen/margin_very_small"
                        android:textColor="@color/colorAccentLightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coin_price_change_7d"/>

                    <TextView
                        android:id="@+id/coin_price_change_7d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>